--- a/src/app/about/robin-chen/robin-chen.component.html
+++ b/src/app/about/robin-chen/robin-chen.component.html
@@ -1,24 +1,122 @@
-<section class="doctor-two">
+<div class="page-wrapper">
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu current">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li><a href="services" routerLink="/services">Services</a></li>
+            <li><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li class="">
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
+  <section class="inner-banner">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="doctor-two__image">
-                    <img src="../../../assets/images/resources/Robin-Chen.jpg" alt="Awesome Image"/>
-                </div><!-- /.doctor-two__image -->
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-8">
-                <div class="doctor-two__content">
-                    <h2 class="doctor-two__title">Dr Robin Chen</h2><!-- /.doctor-two__title -->
-                    <p class="doctor-two__tag-line"><b>Principal Dentist</b></p><!-- /.doctor-two__tag-line -->
-                    <p class="doctor-two__text">Robin graduated with a Bachelor of Dental Surgery from India in 1989 . Following practicing there for a few years he decided to move to New Zealand where he passed his registration exams (DCNZ ) in 1996 . He went into private practice in Auckland where he worked for 2 years before making the move to Invercargill in 1998 . He has enjoyed living and serving the community In Southland for over 20 years . He then decided to move up north to Ruakaka to be close to his parents who live in Auckland. </p><br>
-                    <p class="doctor-two__text">Robin is honest , friendly and very competent in all aspects of general dentistry . He is a dedicated clinician and enjoys different people and cultures.</p><!-- /.doctor-two__text -->
-                    
-                             
-                </div><!-- /.doctor-two__content -->
-            </div><!-- /.col-lg-8 -->
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</section><!-- /.doctor-two -->
-
-
-<a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+      <h2 class="inner-banner__title">Dr Robin Chen</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html">Home</a>
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="about.html">Meet the Team</a>
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="doctor-two">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="doctor-two__image">
+            <img
+              src="../../../assets/images/resources/Robin-Chen.jpg"
+              alt="Awesome Image"
+            />
+          </div>
+          <!-- /.doctor-two__image -->
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-lg-8">
+          <div class="doctor-two__content">
+            <h2 class="doctor-two__title">Dr Robin Chen</h2>
+            <!-- /.doctor-two__title -->
+            <p class="doctor-two__tag-line"><b>Principal Dentist</b></p>
+            <!-- /.doctor-two__tag-line -->
+            <p class="doctor-two__text">
+              Robin graduated with a Bachelor of Dental Surgery from India in
+              1989 . Following practicing there for a few years he decided to
+              move to New Zealand where he passed his registration exams (DCNZ )
+              in 1996 . He went into private practice in Auckland where he
+              worked for 2 years before making the move to Invercargill in 1998
+              . He has enjoyed living and serving the community In Southland for
+              over 20 years . He then decided to move up north to Ruakaka to be
+              close to his parents who live in Auckland.
+            </p>
+            <br />
+            <p class="doctor-two__text">
+              Robin is honest , friendly and very competent in all aspects of
+              general dentistry . He is a dedicated clinician and enjoys
+              different people and cultures.
+            </p>
+            <!-- /.doctor-two__text -->
+          </div>
+          <!-- /.doctor-two__content -->
+        </div>
+        <!-- /.col-lg-8 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.doctor-two -->
+</div>
