--- a/src/app/about/seena-gopi/seena-gopi.component.html
+++ b/src/app/about/seena-gopi/seena-gopi.component.html
@@ -1,30 +1,117 @@
-<section class="inner-banner">
+<div class="page-wrapper">
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu current">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li><a href="services" routerLink="/services">Services</a></li>
+            <li><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li class="">
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
+  <section class="inner-banner">
     <div class="container">
-        <h2 class="inner-banner__title">Dr Seena Gopi</h2><!-- /.inner-banner__title -->
-        <ul class="thm-breadcrumb">
-            <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
-            <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="about.html">Meet the Team</a></li>
-        </ul><!-- /.thm-breadcrumb -->
-    </div><!-- /.container -->
-</section><!-- /.inner-banner -->
-<section class="doctor-two">
+      <h2 class="inner-banner__title">Dr Seena Gopi</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html">Home</a>
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="about.html">Meet the Team</a>
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="doctor-two">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="doctor-two__image">
-                    <img src="../../../assets/images/resources/Seena.jpg" alt="Awesome Image"/>
-                </div><!-- /.doctor-two__image -->
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-8">
-                <div class="doctor-two__content">
-                    <h2 class="doctor-two__title">Dr Seena Gopi</h2><!-- /.doctor-two__title -->
-                    <p class="doctor-two__tag-line"><b>Owner /  Dentist</b></p><!-- /.doctor-two__tag-line -->
-                    <p class="doctor-two__text">Seena purchased the practice in 2016 and owns another practice in Warkworth.</p><br>
-                    <p class="doctor-two__text">Seena spends most of her time at the Warkworth and her a very efficient team helping her with the Ruakaka Dental Practice. Seena graduated in 2004 and enjoys every aspect of dentistry. She takes pride in providing dentistry at the highest standard, in a comfortable and caring environment.Outside of work Seena enjoys spending time with her husband and son.She loves to travel, explore the local beaches and enjoy long walks. </p><br><!-- /.doctor-two__text -->
-                    
-                             
-                </div><!-- /.doctor-two__content -->
-            </div><!-- /.col-lg-8 -->
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</section><!-- /.doctor-two -->
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="doctor-two__image">
+            <img src="../../../assets/images/resources/Seena.jpg" alt="Awesome Image" />
+          </div>
+          <!-- /.doctor-two__image -->
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-lg-8">
+          <div class="doctor-two__content">
+            <h2 class="doctor-two__title">Dr Seena Gopi</h2>
+            <!-- /.doctor-two__title -->
+            <p class="doctor-two__tag-line"><b>Owner / Dentist</b></p>
+            <!-- /.doctor-two__tag-line -->
+            <p class="doctor-two__text">
+              Seena purchased the practice in 2016 and owns another practice in
+              Warkworth.
+            </p>
+            <br />
+            <p class="doctor-two__text">
+              Seena spends most of her time at the Warkworth and her a very
+              efficient team helping her with the Ruakaka Dental Practice. Seena
+              graduated in 2004 and enjoys every aspect of dentistry. She takes
+              pride in providing dentistry at the highest standard, in a
+              comfortable and caring environment.Outside of work Seena enjoys
+              spending time with her husband and son.She loves to travel,
+              explore the local beaches and enjoy long walks.
+            </p>
+            <br /><!-- /.doctor-two__text -->
+          </div>
+          <!-- /.doctor-two__content -->
+        </div>
+        <!-- /.col-lg-8 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.doctor-two -->
+</div>
