--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,78 +1,198 @@
 <div class="page-wrapper">
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li>
+              <a href="services" routerLink="/services">Services</a>
+            </li>
+            <li><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li class="current">
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
 
-     <section class="inner-banner">
-         <div class="container">
-             <h2 class="inner-banner__title">Contact Us</h2><!-- /.inner-banner__title -->
-             <ul class="thm-breadcrumb">
-                 <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
-                 <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="contact.html">Contact Us</a></li>
-             </ul><!-- /.thm-breadcrumb -->
-         </div><!-- /.container -->
-     </section><!-- /.inner-banner -->
-     <section class="contact-one contact-one__contact-page">
-         <div class="container">
-             <div class="row">
-                 <div class="col-lg-7">
-                     <div class="block-title">
-                         <h2 class="block-title__title">Book an Appointments</h2><!-- /.block-title__title -->
-                         <p class="block-title__text">To make an appointment with our Spokane office, please complete the form available on this page. Otherwise, we welcome you to contact our scheduling coordinator directly during our normal office hours.</p><!-- /.block-title__text -->
-                     </div><!-- /.block-title -->
-                     <form action="contact-mail.php" method="post" class="contact-one__form contact-form-validated">                            
-                         <div class="row">
-                             <div class="col-lg-12">
-                                 <input type="text" name="name" placeholder="Full Name">
-                             </div><!-- /.col-lg-12 -->
-                             <div class="col-lg-12">
-                                 <input type="text" name="email" placeholder="Email Address">
-                             </div><!-- /.col-lg-12 -->
-                             <div class="col-lg-12">
-                                 <input type="text" name="phone" placeholder="Phone">
-                             </div><!-- /.col-lg-12 -->
-                             <div class="col-lg-12">
-                                 <textarea placeholder="Message" name="message"></textarea>
-                             </div><!-- /.col-lg-12 -->
-                             <div class="col-lg-12">
-                                 <button type="submit" class="thm-btn">Submit Now</button>
-                             </div><!-- /.col-lg-12 -->
-                         </div><!-- /.row -->
-                     </form>
-                 </div><!-- /.col-lg-7 -->
-                 <div class="col-lg-5 ">
-                     <div class="contact-one__page-content">
-                         <h2 class="contact-one__page-title">Contact Details</h2><!-- /.contact-one__page-title -->
-                   
-                         <div class="contact-one__page-widget">
-                             <i class="contact-one__page-widget__icon icon icon-Pointer"></i>
-                             <h3 class="contact-one__page-widget__title">Address :</h3><!-- /.contact-one__page-widget__title -->
-                             <p class="contact-one__page-widget__text">19/378 Marsden Point Road, Ruakaka 0171</p><!-- /.contact-one__page-widget__text -->
-                         </div><!-- /.contact-one__page-widget -->
-                         <div class="contact-one__page-widget">
-                             <i class="contact-one__page-widget__icon icon icon-Phone2"></i>
-                             <h3 class="contact-one__page-widget__title">Phone :</h3><!-- /.contact-one__page-widget__title -->
-                             <p class="contact-one__page-widget__text"><a href="tel:09-432-8139">09-432-8139</a> </p><!-- /.contact-one__page-widget__text -->
-                         </div><!-- /.contact-one__page-widget -->
-                         <div class="contact-one__page-widget">
-                             <i class="contact-one__page-widget__icon icon icon-Plaine"></i>
-                             <h3 class="contact-one__page-widget__title">Email : </h3><!-- /.contact-one__page-widget__title -->
-                             <p class="contact-one__page-widget__text"><a href="mailto:dentistruakaka@outlook.com">dentistruakaka@outlook.com</a></p><!-- /.contact-one__page-widget__text -->
-                         </div><!-- /.contact-one__page-widget -->
-                         <div class="contact-one__page-widget">
-                             <i class="contact-one__page-widget__icon icon icon-Timer"></i>
-                             <h3 class="contact-one__page-widget__title">Business Hours</h3><!-- /.contact-one__page-widget__title -->
-                             <p class="contact-one__page-widget__text">Monday – Friday 09:00am – 17:00pm </p><!-- /.contact-one__page-widget__text -->
-                         </div><!-- /.contact-one__page-widget -->
-                     </div><!-- /.contact-one__page-content -->
-                 </div><!-- /.col-lg-5 -->
-             </div><!-- /.row -->
-         </div><!-- /.container -->
-     </section><!-- /.contact-one -->
-     <section class="contact-map">
-         <div class="container">
-         
-             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9144.559136017582!2d174.45123327904977!3d-35.87131399687437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf8f1631d271991!2sGentle%20Dental%20Ruakaka!5e0!3m2!1sen!2sin!4v1600745474185!5m2!1sen!2sin" class="google-map__home" allowfullscreen></iframe>
-         </div><!-- /.container -->
-     </section><!-- /.contact-map -->
-    
+  <section class="inner-banner">
+    <div class="container">
+      <h2 class="inner-banner__title">Contact Us</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html">Home</a>
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="contact.html">Contact Us</a>
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="contact-one contact-one__contact-page">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <div class="block-title">
+            <h2 class="block-title__title">Book an Appointments</h2>
+            <!-- /.block-title__title -->
+            <p class="block-title__text">
+              To make an appointment with our Spokane office, please complete
+              the form available on this page. Otherwise, we welcome you to
+              contact our scheduling coordinator directly during our normal
+              office hours.
+            </p>
+            <!-- /.block-title__text -->
+          </div>
+          <!-- /.block-title -->
+          <form
+            action="contact-mail.php"
+            method="post"
+            class="contact-one__form contact-form-validated"
+          >
+            <div class="row">
+              <div class="col-lg-12">
+                <input type="text" name="name" placeholder="Full Name" />
+              </div>
+              <!-- /.col-lg-12 -->
+              <div class="col-lg-12">
+                <input type="text" name="email" placeholder="Email Address" />
+              </div>
+              <!-- /.col-lg-12 -->
+              <div class="col-lg-12">
+                <input type="text" name="phone" placeholder="Phone" />
+              </div>
+              <!-- /.col-lg-12 -->
+              <div class="col-lg-12">
+                <textarea placeholder="Message" name="message"></textarea>
+              </div>
+              <!-- /.col-lg-12 -->
+              <div class="col-lg-12">
+                <button type="submit" class="thm-btn">Submit Now</button>
+              </div>
+              <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+          </form>
+        </div>
+        <!-- /.col-lg-7 -->
+        <div class="col-lg-5">
+          <div class="contact-one__page-content">
+            <h2 class="contact-one__page-title">Contact Details</h2>
+            <!-- /.contact-one__page-title -->
 
- </div><!-- /.page-wrapper -->
- <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+            <div class="contact-one__page-widget">
+              <i class="contact-one__page-widget__icon icon icon-Pointer"></i>
+              <h3 class="contact-one__page-widget__title">Address :</h3>
+              <!-- /.contact-one__page-widget__title -->
+              <p class="contact-one__page-widget__text">
+                19/378 Marsden Point Road, Ruakaka 0171
+              </p>
+              <!-- /.contact-one__page-widget__text -->
+            </div>
+            <!-- /.contact-one__page-widget -->
+            <div class="contact-one__page-widget">
+              <i class="contact-one__page-widget__icon icon icon-Phone2"></i>
+              <h3 class="contact-one__page-widget__title">Phone :</h3>
+              <!-- /.contact-one__page-widget__title -->
+              <p class="contact-one__page-widget__text">
+                <a href="tel:09-432-8139">09-432-8139</a>
+              </p>
+              <!-- /.contact-one__page-widget__text -->
+            </div>
+            <!-- /.contact-one__page-widget -->
+            <div class="contact-one__page-widget">
+              <i class="contact-one__page-widget__icon icon icon-Plaine"></i>
+              <h3 class="contact-one__page-widget__title">Email :</h3>
+              <!-- /.contact-one__page-widget__title -->
+              <p class="contact-one__page-widget__text">
+                <a href="mailto:dentistruakaka@outlook.com"
+                  >dentistruakaka@outlook.com</a
+                >
+              </p>
+              <!-- /.contact-one__page-widget__text -->
+            </div>
+            <!-- /.contact-one__page-widget -->
+            <div class="contact-one__page-widget">
+              <i class="contact-one__page-widget__icon icon icon-Timer"></i>
+              <h3 class="contact-one__page-widget__title">Business Hours</h3>
+              <!-- /.contact-one__page-widget__title -->
+              <p class="contact-one__page-widget__text">
+                Monday – Friday 09:00am – 17:00pm
+              </p>
+              <!-- /.contact-one__page-widget__text -->
+            </div>
+            <!-- /.contact-one__page-widget -->
+          </div>
+          <!-- /.contact-one__page-content -->
+        </div>
+        <!-- /.col-lg-5 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.contact-one -->
+  <section class="contact-map">
+    <div class="container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9144.559136017582!2d174.45123327904977!3d-35.87131399687437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf8f1631d271991!2sGentle%20Dental%20Ruakaka!5e0!3m2!1sen!2sin!4v1600745474185!5m2!1sen!2sin"
+        class="google-map__home"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.contact-map -->
+</div>
+<!-- /.page-wrapper -->
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"
+  ><i class="fa fa-angle-up"></i
+></a>
