--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,29 +1,107 @@
 <div class="page-wrapper">
-    <section class="inner-banner">
-        <div class="container">
-            <h2 class="inner-banner__title">Our Gallery</h2><!-- /.inner-banner__title -->
-            <ul class="thm-breadcrumb">
-                <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
-                <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="#">Our Gallery</a></li>
-            </ul><!-- /.thm-breadcrumb -->
-        </div><!-- /.container -->
-    </section><!-- /.inner-banner -->
-    <section class="gallery-one gallery-one__page">
-        <div class="container">
-            <div class="row">
-               
-               
-               
-            </div><!-- /.row -->
-        </div><!-- /.container -->
-    </section><!-- /.gallery-one -->
-    <section class="cta-two">
-        <div class="container">
-            <h2 class="cta-two__title">Have Dental Problem : Call us at <a href="tel:09-432-8139" class="cta-two__highlight">09-432-8139</a> or make an <a href="book-an-appointment.html"
-                    class="cta-two__highlight cta-two__link">Appointment</a></h2><!-- /.cta-two__title -->
-        </div><!-- /.container -->
-    </section><!-- /.cta-two -->
-    
-
-</div><!-- /.page-wrapper -->
-<a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li >
+              <a href="services" routerLink="/services">Services</a>
+            </li>
+            <li class="current"><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li >
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
+  <section class="inner-banner">
+    <div class="container">
+      <h2 class="inner-banner__title">Our Gallery</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html">Home</a>
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="# ">Our Gallery</a>
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="gallery-one gallery-one__page">
+    <div class="container">
+      <div class="row"></div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.gallery-one -->
+  <section class="cta-two">
+    <div class="container">
+      <h2 class="cta-two__title">
+        Have Dental Problem : Call us at
+        <a href="tel:09-432-8139" class="cta-two__highlight">09-432-8139</a> or
+        make an
+        <a
+          href="book-an-appointment.html"
+          class="cta-two__highlight cta-two__link"
+          >Appointment</a
+        >
+      </h2>
+      <!-- /.cta-two__title -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.cta-two -->
+</div>
+<!-- /.page-wrapper -->
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"
+  ><i class="fa fa-angle-up"></i
+></a>
