--- a/src/app/services/crowns-and-bridges/crowns-and-bridges.component.html
+++ b/src/app/services/crowns-and-bridges/crowns-and-bridges.component.html
@@ -60,7 +60,7 @@
   </header>
   <section class="inner-banner">
     <div class="container">
-      <h2 class="inner-banner__title">Hygienist</h2>
+      <h2 class="inner-banner__title">Crowns & Bridges</h2>
       <!-- /.inner-banner__title -->
       <ul class="thm-breadcrumb">
         <li class="thm-breadcrumb__item">
@@ -77,7 +77,7 @@
           >
         </li>
         <li class="thm-breadcrumb__item current">
-          <a class="thm-breadcrumb__link" href="#">Hygienist</a>
+          <a class="thm-breadcrumb__link" href="#">Crowns & Bridges</a>
         </li>
       </ul>
       <!-- /.thm-breadcrumb -->
@@ -138,11 +138,11 @@
                   >
                 </li>
                 <!-- /.service-sidebar__list-item -->
-                <li class="service-sidebar__list-item current">
+                <li class="service-sidebar__list-item">
                   <a
                     href="hygienist.html"
-                    routerLink="/hygienist"
                     class="service-sidebar__list-link"
+                    routerLink="/hygienist"
                     >Hygienist</a
                   >
                 </li>
@@ -165,7 +165,7 @@
                   >
                 </li>
                 <!-- /.service-sidebar__list-item -->
-                <li class="service-sidebar__list-item">
+                <li class="service-sidebar__list-item current">
                   <a
                     href="crowns-and-bridges.html"
                     class="service-sidebar__list-link"
@@ -186,30 +186,42 @@
           <div class="service-details__content">
             <div class="service-details__image">
               <img
-                src="../../../assets/images/services/Hygienist.jpg"
+                src="../../../assets/images/services/Crowns-Bridges-1.jpg"
                 alt="Awesome Image"
               />
             </div>
             <!-- /.service-details__image -->
-            <h3 class="service-details__title">Hygienist</h3>
+            <h3 class="service-details__title">Crowns & Bridges</h3>
             <!-- /.service-details__title -->
             <p class="service-details__text">
-              Dental Hygienists play a vital role in helping maintain healthy
-              teeth and good oral hygiene. They accomplish this through regular
-              check-ups, the use of preventative methods, and educating patients
-              on oral hygiene strategies best suited to them. As they provide a
-              thorough examination of the oral tissues and assess any potential
-              for periodontal disease, Hygienists can help identify an issue
-              before it arises and becomes problematic. Treatment may vary
-              depending on the condition of oral hygiene. Most visits consist of
-              a thorough clean to remove calculus, plaque and stains. If
-              required, sealants and fluorides are applied to help protect the
-              teeth to prevent further damage. Your hygienist will provide
-              personalised methods to help maintain oral health and education
-              surrounding any issues that may be present. They may also give
-              specific instructions when cleaning or recommend products that may
-              be of use. Recalls are usually 6 months for a hygienist scale and
-              polish, however, this may differ depending on your oral health.
+              A crown is used to entirely cover or “cap” a damaged tooth. The
+              crowns and most bridges are prosthetic devices that are cemented
+              to the existing teeth or implants, can be removed only by the
+              dentist. Besides strengthening a damaged tooth, a crown can be
+              used to enhance its appearance or the shape. To match the colour
+              of the natural teeth, the porcelain or ceramic crowns are used.
+              The gold, metal alloys, acrylic are other crown materials that are
+              stronger than porcelain which are recommended for the back teeth.
+            </p>
+            <!-- /.service-details__text -->
+            <p class="service-details__text">
+              Bridges are generally recommended to replace one or more missing
+              teeth. They span the space of the teeth missing. The bridges are
+              cemented on the natural teeth, known to be the abutments which
+              serves as the anchor for the bridge. Pontic is the replacement
+              tooth that is attached to the crowns which covers the abutments.
+              They can last lifetime but they may get loosened up or fall off.
+              By having a good oral hygiene, one can prevent the bridge from
+              falling off or getting damaged by dental diseases. A regular check
+              – up and a professional clean with the dentist and hygienist are
+              highly recommended.
+            </p>
+            <!-- /.service-details__text -->
+            <p class="service-details__text">
+              Bridges are commonly used to replace one or more missing teeth.
+              They span the space where the teeth are missing. Gaps left by
+              missing teeth eventually cause the remaining teeth to rotate or
+              shift into the empty spaces, resulting in a bad bite.
             </p>
             <!-- /.service-details__text -->
           </div>
@@ -229,7 +241,7 @@
         <a href="tel:09-432-8139" class="cta-two__highlight">09-432-8139</a> or
         make an
         <a
-          href="/book"
+          href="book-an-appointment.html"
           routerLink="/book"
           class="cta-two__highlight cta-two__link"
           >Appointment</a
@@ -241,6 +253,3 @@
   </section>
   <!-- /.cta-two -->
 </div>
-<a href="#" data-target="html" class="scroll-to-target scroll-to-top"
-  ><i class="fa fa-angle-up"></i
-></a>
