--- a/src/app/about/kayla-flewellyn/kayla-flewellyn.component.html
+++ b/src/app/about/kayla-flewellyn/kayla-flewellyn.component.html
@@ -1,34 +1,125 @@
 <div class="page-wrapper">
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu current">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li><a href="services" routerLink="/services">Services</a></li>
+            <li><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li class="">
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
 
-        <section class="inner-banner">
-            <div class="container">
-                <h2 class="inner-banner__title">Kayla Flewellyn</h2><!-- /.inner-banner__title -->
-                <ul class="thm-breadcrumb">
-                    <li class="thm-breadcrumb__item"><a class="thm-breadcrumb__link" href="index.html">Home</a></li>
-                    <li class="thm-breadcrumb__item current"><a class="thm-breadcrumb__link" href="about.html">Meet the Team</a></li>
-                </ul><!-- /.thm-breadcrumb -->
-            </div><!-- /.container -->
-        </section><!-- /.inner-banner -->
-        <section class="doctor-two">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="doctor-two__image">
-                            <img src="../../../assets/images/resources/Kayla-Flewellyn.jpg" alt="Awesome Image"/>
-                        </div><!-- /.doctor-two__image -->
-                    </div><!-- /.col-lg-4 -->
-                    <div class="col-lg-8">
-                        <div class="doctor-two__content">
-                            <h2 class="doctor-two__title">Kayla Flewellyn</h2><!-- /.doctor-two__title -->
-                            <p class="doctor-two__tag-line"><b>Dental Assistant</b></p><!-- /.doctor-two__tag-line -->
-                            <p class="doctor-two__text">I only started working as a dental assistant at Gentle Dental since May. I was always interested in this line of work and when the position was offered to me I jumped at it. I have learnt a lot while working alongside of Robin. </p><br>
-							<p class="doctor-two__text">What I love about working at this clinic is that the patients that come in feeling nervous and stressed, gain the confidence and trust in us which takes away their fear.  The other thing I enjoy is that no day is the same every day is switched up whether it's meeting new people or learning something completely different.</p><br><!-- /.doctor-two__text -->
-							<p class="doctor-two__text">My hobbies include visiting new places with my partner walking our dog's four-wheel driving and surfing.</p>
-							
-                                     
-                        </div><!-- /.doctor-two__content -->
-                    </div><!-- /.col-lg-8 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </section><!-- /.doctor-two -->
+  <section class="inner-banner">
+    <div class="container">
+      <h2 class="inner-banner__title">Kayla Flewellyn</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html">Home</a>
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="about.html">Meet the Team</a>
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="doctor-two">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="doctor-two__image">
+            <img
+              src="../../../assets/images/resources/Kayla-Flewellyn.jpg"
+              alt="Awesome Image"
+            />
+          </div>
+          <!-- /.doctor-two__image -->
+        </div>
+        <!-- /.col-lg-4 -->
+        <div class="col-lg-8">
+          <div class="doctor-two__content">
+            <h2 class="doctor-two__title">Kayla Flewellyn</h2>
+            <!-- /.doctor-two__title -->
+            <p class="doctor-two__tag-line"><b>Dental Assistant</b></p>
+            <!-- /.doctor-two__tag-line -->
+            <p class="doctor-two__text">
+              I only started working as a dental assistant at Gentle Dental
+              since May. I was always interested in this line of work and when
+              the position was offered to me I jumped at it. I have learnt a lot
+              while working alongside of Robin.
+            </p>
+            <br />
+            <p class="doctor-two__text">
+              What I love about working at this clinic is that the patients that
+              come in feeling nervous and stressed, gain the confidence and
+              trust in us which takes away their fear. The other thing I enjoy
+              is that no day is the same every day is switched up whether it's
+              meeting new people or learning something completely different.
+            </p>
+            <br /><!-- /.doctor-two__text -->
+            <p class="doctor-two__text">
+              My hobbies include visiting new places with my partner walking our
+              dog's four-wheel driving and surfing.
+            </p>
+          </div>
+          <!-- /.doctor-two__content -->
+        </div>
+        <!-- /.col-lg-8 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.doctor-two -->
 </div>
