--- a/src/app/services/dentures/dentures.component.html
+++ b/src/app/services/dentures/dentures.component.html
@@ -1,1 +1,246 @@
-<p>dentures works!</p>
+<div class="page-wrapper">
+  <header class="site-header header-one">
+    <nav class="navbar navbar-expand-lg navbar-light header-navigation stricky">
+      <div class="container clearfix">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="logo-box clearfix">
+          <a class="navbar-brand" href="home" routerLink="home">
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="main-logo"
+              alt="Awesome Image"
+            />
+            <img
+              src="../../assets/images/resources/logo.png"
+              class="stick-logo"
+              alt="Awesome Image"
+            />
+          </a>
+          <button class="menu-toggler" data-target=".main-navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
+        <!-- /.logo-box -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="main-navigation">
+          <ul class="navigation-box">
+            <li>
+              <a href="home" routerLink="/home" routerLinkActive="currents"
+                >Home</a
+              >
+            </li>
+            <li class="submenu">
+              <a href="about" routerLink="/about">About Us</a>
+            </li>
+            <li class="current">
+              <a href="services" routerLink="/services">Services</a>
+            </li>
+            <li><a href="gallery" routerLink="/gallery">Gallery</a></li>
+            <li class="">
+              <a href="contact" routerLink="/contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+        <div class="right-side-box">
+          <a href="tel:09-432-8139" class="header-one__cta">
+            <span class="header-one__cta-icon">
+              <i class="dentallox-icon-call-answer"></i>
+            </span>
+            <span class="header-one__cta-content">
+              <span class="header-one__cta-text">Call Us for query:</span>
+              <span class="header-one__cta-number">09-432-8139</span>
+            </span>
+          </a>
+        </div>
+        <!-- /.right-side-box -->
+      </div>
+      <!-- /.container -->
+    </nav>
+  </header>
+  <section class="inner-banner">
+    <div class="container">
+      <h2 class="inner-banner__title">Dental Filling</h2>
+      <!-- /.inner-banner__title -->
+      <ul class="thm-breadcrumb">
+        <li class="thm-breadcrumb__item">
+          <a class="thm-breadcrumb__link" href="index.html" routerLink="/home"
+            >Home</a
+          >
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a
+            class="thm-breadcrumb__link"
+            href="service.html"
+            routerLink="/services"
+            >Services</a
+          >
+        </li>
+        <li class="thm-breadcrumb__item current">
+          <a class="thm-breadcrumb__link" href="#" routerLink="/dentures"
+            >Dental Filling</a
+          >
+        </li>
+      </ul>
+      <!-- /.thm-breadcrumb -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.inner-banner -->
+  <section class="service-details">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="service-sidebar">
+            <div class="service-sidebar__single">
+              <ul class="service-sidebar__list">
+                <li class="service-sidebar__list-item current">
+                  <a
+                    href="dentures.html"
+                    routerLink="/dentures"
+                    class="service-sidebar__list-link"
+                    >Dentures</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="root-canal.html"
+                    routerLink="/root"
+                    class="service-sidebar__list-link"
+                    >Root Canal</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="extraction.html"
+                    routerLink="/extraction"
+                    class="service-sidebar__list-link"
+                    >Extraction</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="veneers.html"
+                    routerLink="/veneers"
+                    class="service-sidebar__list-link"
+                    >Veneers</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="teeth-whitening.html"
+                    class="service-sidebar__list-link"
+                    routerLink="/teeth"
+                    >Teeth Whitening</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="hygienist.html"
+                    class="service-sidebar__list-link"
+                    routerLink="/hygienist"
+                    >Hygienist</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="examination.html"
+                    routerLink="/exam"
+                    class="service-sidebar__list-link"
+                    >Examination</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="composite-fillings.html"
+                    class="service-sidebar__list-link"
+                    routerLink="/composite"
+                    >Composite Fillings</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+                <li class="service-sidebar__list-item">
+                  <a
+                    href="crowns-and-bridges.html"
+                    class="service-sidebar__list-link"
+                    routerLink="/crowns"
+                    >Crowns & Bridges</a
+                  >
+                </li>
+                <!-- /.service-sidebar__list-item -->
+              </ul>
+              <!-- /.service-sidebar__list -->
+            </div>
+            <!-- /.service-sidebar__single -->
+          </div>
+          <!-- /.service-sidebar -->
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-9">
+          <div class="service-details__content">
+            <div class="service-details__image">
+              <img
+                src="../../../assets/images/services/dentures-1.jpg"
+                alt="Awesome Image"
+              />
+            </div>
+            <!-- /.service-details__image -->
+            <h3 class="service-details__title">Dentures</h3>
+            <!-- /.service-details__title -->
+            <p class="service-details__text">
+              Dentures are prosthetic devices that are moulded to the oral
+              cavity to provide coverage for missing teeth. Dentures can either
+              come as a full or partial denture where they are supported through
+              the surrounding soft tissues within the mouth. They are not a
+              permanent solution to a missing tooth and may be unstable
+              affecting function and comfort as they are made from plastic.
+              However, they are easy and quick to install and are cheaper than
+              most permanent options. These options include implant and bridge
+              solutions.
+            </p>
+            <!-- /.service-details__text -->
+            <p class="service-details__text">
+              Not only are dentures aesthetically appealing, but they provide
+              increased functional aspects for the patient. These include
+              improved chewing ability, clearer pronunciation, and a natural
+              appearance to the face for those with collapsed areas resulted
+              from missing teeth.
+            </p>
+            <!-- /.service-details__text -->
+          </div>
+          <!-- /.service-details__content -->
+        </div>
+        <!-- /.col-lg-9 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.service-details -->
+  <section class="cta-two">
+    <div class="container">
+      <h2 class="cta-two__title">
+        Have Dental Problem : Call us at
+        <a href="tel:09-432-8139" class="cta-two__highlight">09-432-8139</a> or
+        make an
+        <a
+          href="book-an-appointment.html"
+          routerLink="/book"
+          class="cta-two__highlight cta-two__link"
+          >Appointment</a
+        >
+      </h2>
+      <!-- /.cta-two__title -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.cta-two -->
+</div>
